--- a/lab2/Lab2/Lab2.runs/impl_1/.vivado.begin.rst
+++ b/lab2/Lab2/Lab2.runs/impl_1/.vivado.begin.rst
@@ -18,3 +18,28 @@
     <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="16360" HostCore="12" HostMemory="016995635200">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="18604" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="15412" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="11416" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="21000" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="18896" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
