--- a/lab2/Lab2/Lab2.runs/impl_1/.vivado.begin.rst
+++ b/lab2/Lab2/Lab2.runs/impl_1/.vivado.begin.rst
@@ -88,3 +88,23 @@
     <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="21404" HostCore="12" HostMemory="016995635200">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="20812" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="14268" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="21976" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="Jason.Wyche" Host="WYCHESURFACEPRO" Pid="12076" HostCore="12" HostMemory="016995635200">
+    </Process>
+</ProcessHandle>
